tests/api/reference/negative/11-from-hex-digit.asm
const invalid: bytes = bytes.from_hex("0g")
